--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "registrationform",
+  "homepage": "https://jokino9212.github.io/registrationForm",
   "version": "0.1.0",
-  "homepage": "jokino9212.github.io/registrationForm",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
